--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "use-sound": "^4.0.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "worker-timers": "^7.0.33"
   },
   "scripts": {
     "start": "react-scripts start",
